@@ -11,10 +11,14 @@
 	* NAMESPACE: Export anydate
 
 	* tests/simpleTests.R: Expanded
-	* tests/simpleTests.Rout.save: Added for proper comparison
+	* tests/simpleTests.Rout.save: Initially added for proper comparison,
+	deactivated in package as local format make fixed comparison difficult
 
 	* tests/allFormats.R: Added test of all formats
-	* tests/simpleTests.Rout.save: Added for proper comparison
+	* tests/simpleTests.Rout.save: Initially added for proper comparison,
+	deactivated in package as local format make fixed comparison difficult
+
+	* tests/validate.R: Added, full-cycle conversion + comparison with R
 
 	* man/anytime-package.Rd: Rewritten and expanded
 
